tests/invalid/dereference_non_pointer.lang
proc main() void {
	var i: i32 = 1;
	var b: i32 = *i;
}
